--- a/templates/process.html
+++ b/templates/process.html
@@ -1,11 +1,13 @@
 <html>
   <body>
-
     <img src="/static/caravel.svg">
     <br/><br/><br/>
-
     <h2>Selected PEP:</h2>
-    <p>{{ p }}</p>
-
+    <pre>{{ p }}</pre>
+    <form class="form-inline" method="POST" action="{{ url_for('run') }}">
+      </div>
+        <button type="submit" class="btn btn-default">Run</button>
+      </div>
+    </form>
   </body>
 </html>
