add page titles

--- a/templates/process.html
+++ b/templates/process.html
@@ -1,4 +1,9 @@
 <html>
+<head>
+    <title>
+        Caravel - Run
+    </title>
+</head>
   <body>
     <img src="/static/caravel.svg">
     <br/><br/><br/>
