--- a/templates/run.html
+++ b/templates/run.html
@@ -1,4 +1,9 @@
 <html>
+<head>
+	<title>
+		Caravel - Results
+	</title>
+</head>
   <body>
     <img src="/static/caravel.svg">
     <br/><br/><br/>
