--- a/templates/process.html
+++ b/templates/process.html
@@ -1,6 +1,8 @@
 <html>
     <head>
+	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
         <title>
+	
             Caravel - Run
         </title>
     </head>
