--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
   	<title>
   		Caravel - Index
   	</title>
