--- a/templates/process.html
+++ b/templates/process.html
@@ -13,6 +13,9 @@
         {% for item in p_info %}
             <p><b>{{ item }}:</b> <code>{{ p_info[item] }}</code></p>
         {% endfor %}
+
+    <a href="/{{p_info.name}}/summary/{{p_info.summary_html}}">summary</a>
+
         <h2>Perform action on the PEP</h2>
         <form class="form-inline" method="POST" action="{{ url_for('run') }}">
             <p>Provide optional options to looper run command, pass <code>-h</code> for help :</p>
