--- a/templates/process.html
+++ b/templates/process.html
@@ -16,6 +16,28 @@
 
             <a href="/{{p_info.name}}/summary/{{p_info.summary_html}}">summary</a>
 
+            {% if p_info["subprojects"] is not none %}
+            <form class="form-inline" method="POST" action="{{ url_for('process') }}">
+                <div>
+                    <select name="subprojects">
+                        {% for i in p_info["subprojects"] %}
+                            <option value="{{ i }}">{{ i }}</option>
+                        {% endfor %}
+                        <option value="{{ None }}">None</option>
+                    </select>
+                </div>
+                <div>
+                    <button type="submit" class="btn btn-default">Activate</button>
+                </div>
+            </form>
+            {% endif %}
+            {% if sp is not none %}
+                <i><p>{{ sp }} subproject activated</p></i>
+            {% else %}
+                {% if p_info["subprojects"] is not none %}
+                    <i><p>No subproject activated</p></i>
+                {% endif %}
+            {% endif %}
             <h2>Perform action on the PEP</h2>
             <form class="form-inline" method="POST" action="{{ url_for('action') }}">
                 <div>
