--- a/templates/process.html
+++ b/templates/process.html
@@ -22,13 +22,25 @@
             });
           });
         </script>
+        <script type=text/javascript>
+          $(function() {
+            $('a#show_options').bind('click', function() {
+              $.getJSON($SCRIPT_ROOT + '/_background_options', {
+                act: $('select[name="actions"]').val(),
+              }, function(data) {
+                $("div#options").html(data.options);
+              });
+              return false;
+            });
+          });
+        </script>
     </head>
     <body>
         <img src="/static/caravel.svg">
         <br/><br/><br/>
         
         <h2>Selected PEP info:</h2>
-        {% for item in p_info %}
+        {% for item in p_info %} 
             <p><b>{{ item }}: </b><code id="{{ item }}">{{ p_info[item] }}</code></p>
         {% endfor %}
 
@@ -44,30 +56,19 @@
         {% endif %}
 
         <h2>Perform action on the PEP</h2>
-        <form class="form-inline" method="POST" action="{{ url_for('action') }}">
-            <div>
-                <select name="actions">
-                  <option value="run">Run</option>
-                  <option value="check">Check</option>
-                  <option value="destroy">Destroy</option>
-                  <option value="summarize">Summarize</option>
-                </select>
-            </div>
-            <div>
-                {% for key in options.keys() %}
-                    <div>
-                    <h3>{{ key }}</h3>
-                    {% for item in options[key] %}
-                        <input type="checkbox" name="opt" value="{{ item }}">{{ item }}<br>
-                    {% endfor %}
-                    </div>
-                {% endfor %}
-            </div>
-            <br/>
-            <div>
-                <button type="submit" class="btn btn-default">GO!</button>
-            </div>
-        </form>
+        <div>
+            <select name="actions">
+              <option value="run">Run</option>
+              <option value="check">Check</option>
+              <option value="destroy">Destroy</option>
+              <option value="summarize">Summarize</option>
+            </select>
+        </div>
+        <div>
+            <a href='#' id=show_options><button type="submit" class="btn btn-default">SELECT</button></a>
+        </div>
+        <div id="options"></div>
+        <br/>
         <p>See <a href="https://looper.readthedocs.io/en/latest/usage.html">looper documentation</a> for the options explanation.</p>
     </body>
 </html>
