--- a/templates/execute.html
+++ b/templates/execute.html
@@ -1,17 +1,22 @@
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
-	<title>
-
-		Caravel - Results
-	</title>
-</head>
+  <head>
+  	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
+  	<title>
+  		Caravel - Results
+  	</title>
+  </head>
   <body>
-    <img src="/static/caravel.svg">
-    <br/><br/><br/>
-    <h2>Looper results:</h2>
-    {% for line in output %}
-    	<pre>{{ line }}</pre>
- 	  {% endfor %}
+    <div>
+      <img src="/static/caravel.svg">
+    </div>
+    <br/>
+    <div>
+      <h2>Looper results:</h2>
+    </div>
+    <div>
+      {% for line in output %}
+      	<pre>{{ line }}</pre>
+   	  {% endfor %}
+    <div>
   </body>
 </html>
