--- a/templates/index.html
+++ b/templates/index.html
@@ -4,29 +4,26 @@
   	<title>
   		Caravel - Index
   	</title>
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
   </head>
-
   <body>
-
-    
-
-    <img src="/static/caravel.svg">
+    <div>
+      <img src="/static/caravel.svg">
+    </div>
     <br/>
     <p style="color: red;">{{ warning }}</p>
-    <br/><br/>
-    <h2>Select the input project:</h2>
-    <form class="form-inline" method="POST" action="{{ url_for('process') }}">
-      <div class="form-group">
-        <div class="input-group">
-            <span class="input-group-addon">Projects: </span>
-                <select name="select_project" class="selectpicker form-control">
-                  {% for p in projects %}
-                  <option value="{{ p }}">{{ p }}</option>
-                  {% endfor %}
-                </select>
-        </div>
+    <div>
+      <h2>Select the input project:</h2>
+    </div>
+    <div>
+      <form class="form-inline" method="POST" action="{{ url_for('process') }}">
+        <select name="select_project" class="selectpicker form-control">
+          {% for p in projects %}
+          <option value="{{ p }}">{{ p }}</option>
+          {% endfor %}
+        </select>
         <button type="submit" class="btn btn-default">Go</button>
-      </div>
-    </form>
+      </form>
+    </div>
   </body>
 </html>
