--- a/templates/options.html
+++ b/templates/options.html
@@ -6,6 +6,6 @@
         {% endfor %}
     </div>
     <div>
-        <button type="submit" class="btn btn-default">GO!</button>
+        <button type="submit" class="btn btn-default">GO</button>
     </div>
 </form>
