--- a/templates/process.html
+++ b/templates/process.html
@@ -34,11 +34,14 @@
             });
           });
         </script>
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     </head>
     <body>
+        <div>
         <img src="/static/caravel.svg">
-        <br/><br/><br/>
-        
+        </div>
+        <br/>
+        <div>
         <h2>Selected PEP info:</h2>
         {% for item in p_info %} 
             <p><b>{{ item }}: </b><code id="{{ item }}">{{ p_info[item] }}</code></p>
@@ -51,24 +54,23 @@
                 {% endfor %}
                 <option value=reset>None</option>
             </select>
-            <a href='#' id=show_subproject><button type="submit" class="btn btn-default">Activate</button></a>
+            <a href='#' id=show_subproject><button type="submit" class="btn btn-default">ACTIVATE</button></a>
             <i><p id=subproj_txt>No subproject activated</p></i>
         {% endif %}
-
-        <h2>Perform action on the PEP</h2>
+        </div>
         <div>
+        <h2>Perform action on the PEP</h2>
             <select name="actions">
               <option value="run">Run</option>
               <option value="check">Check</option>
               <option value="destroy">Destroy</option>
               <option value="summarize">Summarize</option>
             </select>
-        </div>
-        <div>
             <a href='#' id=show_options><button type="submit" class="btn btn-default">SELECT</button></a>
         </div>
         <div id="options"></div>
-        <br/>
+        <div>
         <p>See <a href="https://looper.readthedocs.io/en/latest/usage.html">looper documentation</a> for the options explanation.</p>
+        </div>
     </body>
 </html>
