--- a/templates/options.html
+++ b/templates/options.html
@@ -6,10 +6,13 @@
         {% endfor %}
     </div>
     <div>
-    	<p>Provide yout token copied from the terminal:</p>
+    	<p><b>Provide the token copied from the terminal:</b></p>
     	<input type="text" name="token">
     </div>
     <div>
         <button type="submit" class="btn btn-default">GO</button>
     </div>
 </form>
+<div>
+	<p>See <a href="https://looper.readthedocs.io/en/latest/usage.html" target="_new">looper documentation</a> for the options explanation.</p>
+</div>
