--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,10 @@
 div {
-    padding: 10px;
+    padding: 20px;
+}
+#footer {
+   position:absolute;
+   bottom:0;
+   left:20px;
+   width:100%;
+   height:50px;   
 }
