--- a/templates/execute.html
+++ b/templates/execute.html
@@ -1,22 +1,10 @@
-<html>
-  <head>
-  	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
-  	<title>
-  		Caravel - Results
-  	</title>
-  </head>
-  <body>
-    <div>
-      <img src="/static/caravel.svg">
-    </div>
-    <br/>
-    <div>
-      <h2>Looper results:</h2>
-    </div>
-    <div>
-      {% for line in output %}
-      	<pre>{{ line }}</pre>
-   	  {% endfor %}
-    <div>
-  </body>
-</html>
+{% extends "template.html" %}
+{% block title %}Looper results{% endblock %}
+{% block content %}
+  <h2>Looper results:</h2>
+  <div>
+    {% for line in output %}
+    	<pre>{{ line }}</pre>
+    {% endfor %}
+  <div>
+{% endblock %}
