--- a/templates/invalid_token.html
+++ b/templates/invalid_token.html
@@ -1,19 +1,7 @@
-<html>
-  <head>
-	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
-  	<title>
-  		Caravel - Invalid token
-  	</title>
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
-  </head>
-  <body>
-    <div>
-      <img src="/static/caravel.svg">
-    </div>
-    <div>
-      <h2>Invalid token</h2>
-      <p>The provided token is invalid, make sure you have copied the token from the terminal correctly</p>
-      <p>Go <a href="{{ url_for('index') }}">back.</a></p>
-    </div>
-  </body>
-</html>
+{% extends "template.html" %}
+{% block title %}Token invalid{% endblock %}
+{% block content %}
+  <h2>Invalid token</h2>
+  <p>The provided token is invalid, make sure you have copied the token from the terminal correctly</p>
+  <p>Go <a href="{{ url_for('index') }}">back.</a></p>
+{% endblock %}
