--- a/templates/redirect_login.html
+++ b/templates/redirect_login.html
@@ -1,18 +1,8 @@
-<html>
-  <head>
-	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
-  	<title>
-  		Caravel - Go to Login
-  	</title>
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
-  </head>
-  <body>
-    <div>
-      <img src="/static/caravel.svg">
-    </div>
-    <div>
+{% extends "template.html" %}
+{% block title %}Authenticate{% endblock %}
+{% block content %}
       <h2>Authentication instructions</h2>
       <p>You need an authentication token, go to <a href="{{ url_for('login') }}">login</a> to get it.</p>
     </div>
-  </body>
-</html>
+{% endblock %}
+
