--- a/templates/run.html
+++ b/templates/run.html
@@ -1,12 +1,13 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='bootstrap.min.css') }}">
 	<title>
 		Caravel - Results
 	</title>
 </head>
   <body>
-    <img src="/static/caravel.svg">
+    <img src="{{ url_for('static',filename='caravel.svg') }}">
     <br/><br/><br/>
     <h2>Looper results:</h2>
     {% for line in output %}
