--- a/templates/token.html
+++ b/templates/token.html
@@ -1,21 +1,11 @@
-<html>
-  <head>
-	<link rel="stylesheet" type="text/css" href="/static/bootstrap.min.css">
-  	<title>
-  		Caravel - Token
-  	</title>
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
-  </head>
-  <body>
-    <div>
-      <img src="/static/caravel.svg">
-    </div>
-    <div>
-      <h2>Authentication instructions</h2>
-      <p>Your token has been printed to the terminal. Copy and paste it into the browser after:</p>
-      <p><code>http://localhost:5000/?token=</code></p>
-      <p>Additionally, it will be required to <b>run the <code>looper</code> command</b></p>
-      </div>
-    </div>
-  </body>
-</html>
+{% extends "template.html" %}
+{% block title %}Token{% endblock %}
+{% block head %}
+  {{ super() }}
+{% endblock %}
+{% block content %}
+  <h2>Authentication instructions</h2>
+  <p>Your token has been printed to the terminal. Copy and paste it into the browser after:</p>
+  <p><code>http://localhost:5000/?token=</code></p>
+  <p>Additionally, it will be required to <b>run the <code>looper</code> command</b></p>
+{% endblock %}
