--- a/templates/invalid_token.html
+++ b/templates/invalid_token.html
@@ -2,6 +2,6 @@
 {% block title %}Token invalid{% endblock %}
 {% block content %}
   <h2>Invalid token</h2>
-  <p>The provided token is invalid, make sure you have copied the token from the terminal correctly</p>
+  <p>The provided token is invalid or has expired, make sure you copy the token from the terminal correctly.</p>
   <p>Go <a href="{{ url_for('index') }}">back.</a></p>
 {% endblock %}
