--- a/templates/options.html
+++ b/templates/options.html
@@ -1,15 +1,15 @@
 <form class="form-inline" method="POST" action="{{ url_for('action') }}">
-    <div>
+    <div id="vertical">
         <h3>Options</h3>
         {% for item in options %}
             <input type="checkbox" name="opt" value="{{ item }}">{{ item }}<br>
         {% endfor %}
     </div>
-    <div>
+    <div id="vertical">
     	<p><b>Provide the token copied from the terminal:</b></p>
     	<input type="text" name="token">
     </div>
-    <div>
+    <div id=vertical>
         <button type="submit" class="btn btn-default">GO</button>
     </div>
 </form>
