--- a/templates/redirect_login.html
+++ b/templates/redirect_login.html
@@ -2,7 +2,7 @@
 {% block title %}Authenticate{% endblock %}
 {% block content %}
       <h2>Authentication instructions</h2>
-      <p>You need an authentication token, go to <a href="{{ url_for('login') }}">login</a> to get it.</p>
+      <p>This action is protected by a token. You need an authentication token, go to <a href="{{ url_for('login') }}">login</a> to get it.</p>
     </div>
 {% endblock %}
 
