no pswd required, no token expiration, better login handling, suppres sigint

--- a/templates/invalid_token.html
+++ b/templates/invalid_token.html
@@ -3,5 +3,5 @@
 {% block content %}
   <h2>Invalid token</h2>
   <p>This action is protected by a token. The provided token is invalid or has expired, make sure you copy the token from the terminal correctly.</p>
-  <p>Go back or <a href="{{ url_for('login') }}">start over.</a></p>
+  <p><b>Try again</b> or <a href="{{ url_for('login') }}"></b>get new one.</b></a></p>
 {% endblock %}
