--- a/templates/token.html
+++ b/templates/token.html
@@ -5,6 +5,6 @@
 {% endblock %}
 {% block content %}
   <h2>Authentication instructions</h2>
-  <p>Your token has been printed to the terminal. Copy and paste it into the browser after:</p>
-  <p><code>http://localhost:5000/?token=</code></p>
+  <p>Caravel is protected with a token.</p>
+  <p><b>Go to the URL printed to your termianal to authenticate.</b></p>
 {% endblock %}
