--- a/templates/execute.html
+++ b/templates/execute.html
@@ -1,8 +1,19 @@
 {% extends "template.html" %}
 {% block title %}Looper results{% endblock %}
+{% block head %}
+{{ super() }}
+<script>
+function goBack() {
+    window.history.back();
+}
+</script>
+{% endblock %}
 {% block content %}
   <h2>Looper results:</h2>
     {% for line in output %}
     	<code>{{ line }}</code>
     {% endfor %}
+    <div>
+    	<button onclick="goBack()" class="btn btn-default">Go Back</button>
+	</div>
 {% endblock %}
