--- a/templates/process.html
+++ b/templates/process.html
@@ -20,7 +20,7 @@
 </script>
 <script type=text/javascript>
   $(function() {
-    $('a#show_options').bind('click', function() {
+    $('select#show_options').bind('change', function() {
       $.getJSON($SCRIPT_ROOT + '/_background_options', {
         act: $('select[name="actions"]').val(),
       }, function(data) {
@@ -31,15 +31,17 @@
   });
 </script>
 <script type=text/javascript>
-  $(function() {
-    $('a#show_summary').bind('click', function() {
+  function render_summary_link() {
       $.getJSON($SCRIPT_ROOT + '/_background_summary', {
-        act: "test",
       }, function(data) {
         $("div#summary").html(data.summary);
       });
       return false;
-    });
+    }
+  $(function() {
+    // The function is triggered on page load and with the "a#show_summary" button
+    render_summary_link()
+    $('a#show_summary').bind('click', render_summary_link);
   });
 </script>
 {% endblock %}
@@ -60,14 +62,13 @@
         <i><p id=subproj_txt>No subproject activated</p></i>
     {% endif %}
     <h2>Perform action on the PEP</h2>
-        <select name="actions">
+        <select id="show_options" name="actions">
           <option value="run">Run</option>
           <option value="check">Check</option>
           <option value="destroy">Destroy</option>
           <option value="summarize">Summarize</option>
         </select>
-        <a href='#' id=show_options><button type="submit" class="btn btn-default">SELECT</button></a>
     <div id="options"></div>
-    <a href='#' id=show_summary>Get summary</a>
-    <div id="summary"><p>Summary not available</p></div>
+    <a href='#' id=show_summary><button type="button" class="btn btn-default">Get summary</button></a>
+    <div id="summary"></div>
 {% endblock %}
