--- a/templates/summary.html
+++ b/templates/summary.html
@@ -1,4 +1,8 @@
 <div id="vertical">
-<a href="{{ summary }}">summary</a>
+	{% if summary == "Summary not available" %}
+		<p><i>{{ summary }}. Run <code>summarize</code> action to get it. </i></p>
+	{% else %}
+		<a href="{{ summary }}">{{ file_name }}</a>
+	{% endif %}
 </div>
 
