--- a/caravel/templates/token.html
+++ b/caravel/templates/token.html
@@ -6,5 +6,5 @@
 {% block content %}
   <h2>Authentication instructions</h2>
   <p>Caravel is protected with a token.</p>
-  <p><b>Go to the URL printed to your termianal to authenticate.</b></p>
+  <p><b>Go to the URL printed to your terminal to authenticate.</b></p>
 {% endblock %}
