update caravel to new favico

--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -7,7 +7,7 @@
       <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- local stuff -->
-      <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+      <link rel="shortcut icon" href="{{ url_for('static', filename='caravel.ico') }}">
       <title>Caravel - {% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
