--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -3,7 +3,7 @@
   <head>
     {% block head %}
       <!-- remote libraries -->
-      <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='bootstrap.min.css') }}">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
       <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- local stuff -->
