--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -14,10 +14,15 @@
   <div id="wrap">
     <div id="main">
       <body>
-        <a href="{{ url_for('index') }}"><img src="{{ url_for('static',filename='caravel.svg') }}"></a>
-        <form action="{{ url_for('shutdown') }}" method="get">
+        <a href="{{ url_for('index') }}">
+          <img src="{{ url_for('static',filename='caravel.svg') }}">
+        </a>
+        <a href="{{ url_for('shutdown') }}">
           <button type="submit" class="btn btn-default" style="float: right;">CLOSE <i class="fa fa-close"></i></button>
-        </form>
+        </a>
+        <a href="{{ url_for('index') }}">
+          <button type="submit" class="btn btn-default" style="float: right;">START OVER <i class="fa fa-undo"></i></button>
+        </a>
         <br style = “line-height:6;”><br>
         {% block content %}{% endblock %}
       </body>
