--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -6,6 +6,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
       <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
       <!-- local stuff -->
       <link rel="shortcut icon" href="{{ url_for('static', filename='caravel.ico') }}">
       <title>Caravel - {% block title %}{% endblock %}</title>
@@ -31,7 +32,7 @@
   {% block footer %}
   <footer class="footer">
   <div id="footer">
-    <span class="muted">© 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a> at the University of Virginia</span>
+    <span class="muted"><b>caravel v{{version}} </b>© 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a> at the University of Virginia</span>
   </div>
   </footer>
   {% endblock %}
