add looper version to the template, resolves #37

--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -32,7 +32,7 @@
   {% block footer %}
   <footer class="footer">
   <div id="footer">
-    <span class="muted"><b>caravel v{{version}} </b>© 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a> at the University of Virginia</span>
+    <span class="muted"><b>caravel v{{caravel_version}}</b> using looper v{{looper_version}} © 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a> at the University of Virginia</span>
   </div>
   </footer>
   {% endblock %}
