add buttons spacing

--- a/caravel/templates/options.html
+++ b/caravel/templates/options.html
@@ -7,7 +7,7 @@
         {% endfor %}
     </div>
     <div id=vertical>
-        <button type="submit" class="btn btn-default">GO</button>
+        <button type="submit" class="btn btn-default ml-3">GO</button>
     </div>
 </form>
 </br>
