--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -19,10 +19,10 @@
           <img src="{{ url_for('static',filename='caravel.svg') }}">
         </a>
         <a href="{{ url_for('shutdown') }}">
-          <button type="submit" class="btn btn-default" style="float: right;">CLOSE <i class="fa fa-close"></i></button>
+          <button type="submit" class="btn btn-default ml-3" style="float: right;">CLOSE <i class="fa fa-close"></i></button>
         </a>
         <a href="{{ url_for('index') }}">
-          <button type="submit" class="btn btn-default" style="float: right;">START OVER <i class="fa fa-undo"></i></button>
+          <button type="submit" class="btn btn-default ml-3" style="float: right;">START OVER <i class="fa fa-undo"></i></button>
         </a>
         <br style = “line-height:6;”><br>
         {% block content %}{% endblock %}
