--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -2,40 +2,41 @@
 <html>
   <head>
     {% block head %}
-      <!-- remote libraries -->
-      <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-      <link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <!-- local stuff -->
-      <link rel="shortcut icon" href="{{ url_for('static', filename='caravel.ico') }}">
-      <title>Caravel - {% block title %}{% endblock %}</title>
+  		<!-- remote libraries -->
+	    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	  	<link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	  	<!-- local stuff -->
+	  	<link rel="shortcut icon" href="{{ url_for('static', filename='caravel.ico') }}">
+		<title>Caravel - {% block title %}{% endblock %}</title>
     {% endblock %}
   </head>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-    <a class="navbar-brand" href="{{ url_for('index') }}">
-      <img src="{{ url_for('static',filename='logo_caravel_dark.svg') }}" width="180" height="60" alt="">
-    </a>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="http://databio.org">Databio.org</a>
-      </li>
-    </ul> 
-      <a class="nav-link" href="{{ url_for('shutdown') }}">
-        <button type="submit" class="btn btn-outline-light">CLOSE <i class="fa fa-close"></i></button>
-      </a>
-      <a class="nav-link" href="{{ url_for('index') }}">
-        <button type="submit" class="btn btn-outline-light">START OVER <i class="fa fa-undo"></i></button>
-      </a>
-  </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	</button>
+	<a class="navbar-brand" href="{{ url_for('index') }}">
+		<img src="{{ url_for('static',filename='logo_caravel_dark.svg') }}" width="180" height="60" alt="">
+	</a>
+	<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+			<li class="nav-item active">
+				<a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="http://databio.org">Databio.org</a>
+			</li>
+		</ul> 
+		<a class="nav-link" href="{{ url_for('shutdown') }}">
+			<button type="submit" class="btn btn-outline-light">CLOSE <i class="fa fa-close"></i></button>
+		</a>
+		<a class="nav-link" href="{{ url_for('index') }}">
+			<button type="submit" class="btn btn-outline-light">START OVER <i class="fa fa-undo"></i></button>
+		</a>
+	</div>
 </nav>
   <div id="wrap">
     <div id="main">
