--- a/caravel/templates/index.html
+++ b/caravel/templates/index.html
@@ -9,6 +9,6 @@
     <option value="{{ p }}">{{ p }}</option>
     {% endfor %}
   </select>
-  <button type="submit" class="btn btn-default ml-3">Go</button>
+  <button type="submit" class="btn btn-outline-dark ml-2">Go</button>
 </form>
 {% endblock %}
