--- a/caravel/templates/process.html
+++ b/caravel/templates/process.html
@@ -61,7 +61,7 @@
             {% endfor %}
             <option value=reset>None</option>
         </select>
-        <a href='#' id=show_subproject><button type="submit" class="btn btn-default ml-3">ACTIVATE</button></a>
+        <a href='#' id=show_subproject><button type="submit" class="btn btn-outline-dark ml-2">ACTIVATE</button></a>
         <i><p id=subproj_txt>No subproject activated</p></i>
     {% endif %}
     <h2>Perform action on the PEP</h2>
@@ -72,6 +72,6 @@
           <option value="summarize">Summarize</option>
         </select>
     <div id="options"></div>
-    <a href='#' id=show_summary><button type="button" class="btn btn-default">Get summary</button></a>
+    <a href='#' id=show_summary><button type="button" class="btn btn-outline-dark">Get summary</button></a>
     <div id="summary"></div>
 {% endblock %}
