--- a/caravel/templates/template.html
+++ b/caravel/templates/template.html
@@ -8,7 +8,8 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	  	<link rel="stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
-	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
 	  	<!-- local stuff -->
 	  	<link rel="shortcut icon" href="{{ url_for('static', filename='caravel.ico') }}">
 		<title>Caravel - {% block title %}{% endblock %}</title>
@@ -24,14 +25,18 @@
 	<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 		<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 			<li class="nav-item active">
-				<a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="{{ url_for('index') }}">Home</a>
 			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="http://databio.org">Databio.org</a>
-			</li>
+			{% block navbar %}
+			{% endblock %}
 		</ul> 
+		<ul <ul class="nav justify-content-end" >
+			<li class="nav-item active">
+				<a class="nav-link" href="http://databio.org">Databio.org <i class="fa fa-database"></i></a>
+			</li>
+		</ul>
 		<a class="nav-link" href="{{ url_for('shutdown') }}">
-			<button type="submit" class="btn btn-outline-light">CLOSE <i class="fa fa-close"></i></button>
+			<button type="submit" class="btn btn-outline-light">CLOSE <i class="fa fa-times"></i></button>
 		</a>
 		<a class="nav-link" href="{{ url_for('index') }}">
 			<button type="submit" class="btn btn-outline-light">START OVER <i class="fa fa-undo"></i></button>
