--- a/caravel/templates/set_comp_env.html
+++ b/caravel/templates/set_comp_env.html
@@ -15,6 +15,7 @@
   {% else %}
     <h2>Environment variable pointing to the <code>DIVCFG</code> file not found</h2>
     <p>The <code>{{ env_var_name }}</code> environment variable is not set. Set it and run <code>caravel</code> again.</p>
-    <p>Learn more about <a href="http://code.databio.org/divvy/configuration/"><code>DIVCFG</code></a> files concept <a href="http://code.databio.org/divvy/">here</a>.</p>
+    <p>Learn more about <a href="http://code.databio.org/divvy/configuration/" target="_blank"><code>DIVCFG</code></a> files concept <a href="http://code.databio.org/divvy/" target="_blank">here</a>.</p>
+    <a href="{{ referrer }}"><button type="submit" class="btn btn-outline-dark ml-2">Go back <i class="fas fa-arrow-left"></i></button></a>
   {% endif %}
 {% endblock %}
